--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,20 +1,32 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/product.css">
-</head>
+  <link rel="stylesheet" href="/css/forms.css">
+  <link rel="stylesheet" href="/css/product.css">
+  </head>
 
-<body>
+  <body>
     <%- include('../includes/navigation.ejs') %>
 
-    <main>
+      <main>
         <form class="product-form" action="/admin/add-product" method="POST">
-            <div class="form-control">
-                <label for="title">Title</label>
-                <input type="text" name="title" id="title">
-            </div>
-            
-            <button class="btn" type="submit">Add Product</button>
-        </form>
-    </main>
+          <div class="form-control">
+            <label for="title">Title</label>
+            <input type="text" name="title" id="title">
+          </div>
+          <div class="form-control">
+            <label for="imageUrl">ImageUrl</label>
+            <input type="text" name="imageUrl" id="imageUrl">
+          </div>
+          <div class="form-control">
+            <label for="price">Price</label>
+            <input type="number" name="price" id="price">
+          </div>
+          <div class="form-control">
+            <label for="description">Description</label>
+            <textarea name="description" id="description" rows="5"></textarea>
+          </div>
 
-<%- include('../includes/end.ejs') %>
+          <button class="btn" type="submit">Add Product</button>
+        </form>
+      </main>
+
+      <%- include('../includes/end.ejs') %>
