--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,17 +1,22 @@
 <%- include('../includes/head.ejs') %>
+  <link rel="stylesheet" href="/css/cart.css">
   </head>
 
   <body>
     <%- include('../includes/navigation.ejs') %>
       <main>
-        <% if (products.length > 0) { %>
-          <ul>
-            <% products.forEach(prod => { %>
-              <li>
-                <p><%= prod.productData.title %> (<%= prod.quantity %>)</p>                  
+        <% if (products.length> 0) { %>
+          <ul class="cart__item-list">
+            <% products.forEach(prod=> { %>
+              <li class="cart__item">
+                <h1>
+                  <%= prod.title %>
+                </h1>
+                <h2>Quantity: <%= prod.cartItem.quantity %>
+                </h2>
                 <form action="/cart-delete-item" method="POST">
-                  <input type="hidden" value="<%= prod.productData.id %>" name="productId">
-                  <button class="btn" type="submit">Delete</button>
+                  <input type="hidden" value="<%= prod.id %>" name="productId">
+                  <button class="btn danger" type="submit">Delete</button>
                 </form>
               </li>
               <% }) %>
