--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -14,7 +14,8 @@
           <% } %>
             <form class="product-form"
               action="/admin/<% if (editing || hasError) { %>edit-product<% } else { %>add-product<% } %>"
-              method="POST">
+              method="POST"
+              enctype="multipart/form-data">
               <div class="form-control">
                 <label for="title">Title</label>
                 <input class="<%= validationErrors.find(e => e.param === 'title') ? 'invalid' : '' %>" type="text"
