--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -35,8 +35,10 @@
               </article>
               <% } %>
           </div>
-          <% } else { %>
-            <h1>No Products Found!</h1>
-            <% } %>
+          <%- include('../includes/pagination.ejs', { currentPage, nextPage, previousPage, lastPage, hasNextPage,
+            hasPreviousPage }) %>
+            <% } else { %>
+              <h1>No Products Found!</h1>
+              <% } %>
       </main>
       <%- include('../includes/end.ejs') %>
