--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -14,11 +14,12 @@
                 </h1>
                 <h2>Quantity: <%= prod.quantity %>
                 </h2>
-                <form action="/cart-delete-item" method="POST">
+                <!-- <form action="/cart-delete-item" method="POST">
                   <input type="hidden" value="<%= prod.productId._id %>" name="productId">
                   <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                   <button class="btn danger" type="submit">Delete</button>
-                </form>
+                </form> -->
+                <a class="btn" href="/checkout">Order Now!</a>
               </li>
               <% }) %>
           </ul>
