--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -16,9 +16,22 @@
             </li>
             <% }) %>
         </ul>
-        <div class="center">
-          <h2>Total: <%= totalSum %>
+        <div class="centered">
+          <h2>Total: $<%= totalSum %>
           </h2>
+        </div>
+        <div class="centered">
+          <button id="order-btn" class="btn">ORDER</button>
+          <script src="https://js.stripe.com/v3/"></script>
+          <script>
+            var stripe = Stripe('pk_test_51KniAzKMnOfnhWh5gIimyA5WgcrajVgiEZk6jJbrwKOg1WpZnOr1qlKBxpSzL9b9zjNiCqq3yRR2EtAvCCkJIH7Y00SnOZI4FI');
+            var orderBtn = document.getElementById('order-btn');
+            orderBtn.addEventListener('click', function () {
+              stripe.redirectToCheckout({
+                sessionId: '<%= sessionId %>'
+              });
+            });
+          </script>
         </div>
       </main>
       <%- include('../includes/end.ejs') %>
